# ml-pytorch-examples

./: .gitignore  README.md  pyproject.toml
mnist-model/lightning/: mnist-autoencoder.ipynb  mnist-lightning.ipynb  mnist-viz.ipynb  my-mnist.ipynb
mnist-model/pytorch_ignite/: pytorch_ignite.ipynb
segmentation_unet/: demo.ipynb  log_activations.py  mnist_grid_dataset.py  model.py  train.py
vae/: mnist-vae.ipynb
