[tool.poetry]
name = "ml-pytorch-examples"
version = "0.1.0"
description = ""
authors = ["PoffM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.1"
pytorch-ignite = "^0.5.0.post2"
tqdm = "^4.66.4"
ipywidgets = "^8.1.3"
lightning = "^2.3.3"
torchmetrics = "^1.4.0.post0"
numpy = "^1.26.4"
torchinfo = "^1.8.0"
torch-tb-profiler = "^0.4.3"
ipynb = "^0.5.1"
nbformat = "^5.10.4"
mlflow = "^2.15.0"
pynvml = "^11.5.3"
mypy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
